--- a/a.html
+++ b/a.html
@@ -13,7 +13,7 @@
        {{data.a}}
        22222222222222222222
        2023.1.22改动</b>
-       hotfix 12.39
+       len 12.48
     </div>
     <script src="vue.min.js"></script>
     <script>
